collinearity fix again. Found two minor further issues in implementation.